<resources>
    <string name="app_name">Persons App</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="prefs">com.guren.personsapp</string>

    <!-- Person Details -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birth Day</string>
    <string name="age">Age</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="contact_person">Contact Person</string>
    <string name="contact_person_number">Contact Person Number</string>


</resources>